# Rust_UTM_Simulation

./: .gitignore  .gitmodules  Cargo.toml  Complete.md  Conops.md  Currente_htlv.tex  PLAN_CITY_SCENARIO_AND_FEATURES.md  README.md  Relat.md  analyze_city_saturation.py  analyze_daidalus_metrics.py  analyze_xtm_metrics.py  build.rs  city_saturation_experiments.py  compare_metrics.py  documentation.md  eval_ga_champion_seeds.py  experiment.py  experiment_results.json  optimize_daidalus_ga.py  paper.tex  run_comparison.py  sim_metrics.json  sjc_scenario_gen.py  xtm_experiments.py
config/: scenario.json  scenario_dynamic.json  scenario_experiment.json  sim_config.json  two_drone_head_on.json  two_drone_overtake_same_track.json
documentation/: DAIDALUS_AVOIDANCE_AND_EXPERIMENTS_REPORT.md
documentation/report_sections/: scen2_daidalus_sweep_section.tex  scen4c_mixed_fleet_section.tex
experiments/: Plan_for_CBBA.md  analyze_telemetry_reactive.py  two_drone_summary.json
experiments/crossing_90deg_default/: plot_paths_3d.py  scenario.json  sim_config_effective.json
experiments/crossing_90deg_stronger_avoidance/: sim_config_effective.json
experiments/daidalus_ga/: best_genome.json  evaluate_genome_suite.py  ga_fast_checkpoint.json  ga_run_20260322_180945.json  objective_and_suites.py  optimization_run_20260322_170154.json  run_daidalus_ga.py  (+3 more)
src/: main.rs
viewer/: index.html  results_server.py
xTM_refs/: EXPERIMENTS_COMPARISON.md  Untitled  conops_v0.md  testeprimordial1.py  testeprimordial2.py  testeprimordial3.py  testeprimordial4.py  testeprimordial4b.py
(+423 files in other folders)
