[package]
name = "hpm_utm_simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.13", default-features = false, features = ["bevy_asset", "bevy_render", "bevy_scene"] } # Minimal setup for headless simulation
bevy_rapier3d = { version = "0.26", features = [ "simd-stable" ] }

tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rumqttc = "0.24"
uom = "0.35"
nalgebra = "0.32"
cxx = "1.0"
rand = "0.8.5"
lazy_static = "1.5.0"

[build-dependencies]
cxx-build = "1.0"
